plugins {
    id 'application'
    id 'jacoco' // покрытие тестами (встроенный плагин Gradle)
    // Error Prone + NullAway: @NullMarked/@Nullable (JSpecify) были задекларированы во всех
    // package-info.java, но до этого их никто не проверял — IDE могла подсветить нарушение,
    // а ./gradlew build проходил всё равно. Этот плагин делает null-контракт частью компиляции.
    id 'net.ltgt.errorprone' version '4.1.0'
}

group = 'com.rustorio'
version = '0.1.0'

// Java 25 LTS (сентябрь 2025, поддержка до 2033) — новейшая LTS. Toolchain
// фиксирует версию: сборка одинакова у всех, а нужный JDK при отсутствии
// скачивается автоматически (см. foojay-плагин в settings.gradle).
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

// P4-11 (BUG_FIX_PROGRESS.md): `com.rustorio.Main` (headless console demo) and `com.rustorio.Benchmark`
// (dev-only perf measurement) don't belong in the production jar `application`/`run` ships — they
// used to live in `src/main` only because that's where `World`'s package-private members were
// reachable from, a justification that stopped being true once `Benchmark` moved to calling
// `World`'s public API. This source set keeps them out of `src/main` while still compiling against
// it (domain classes, and whatever those domain classes themselves depend on).
sourceSets {
    tools {
        java.srcDirs = ['src/tools/java']
        compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.output + sourceSets.main.runtimeClasspath
    }
}

// Исходники в UTF-8 (комментарии/строки на кириллице). Без явной кодировки javac берёт
// платформенную — на части машин это не UTF-8, и кириллица валит сборку «illegal character».
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

// Версии зависимостей — сверху, чтобы «крутить» их в одном месте.
ext {
    gdxVersion = '1.14.2'   // последняя стабильная libGDX (май 2026)
    lwjglVersion = '3.3.6'  // libGDX 1.14.2 тянет 3.3.3 (старше Java 25); см. ниже
    junitVersion = '5.11.3'
    jspecifyVersion = '1.0.0'
    archunitVersion = '1.4.2'
    jacksonVersion = '2.18.2' // сериализация сохранений в JSON (слой persist)
    errorproneVersion = '2.36.0'
    nullawayVersion = '0.12.3'
}

// libGDX 1.14.2 по умолчанию подтягивает LWJGL 3.3.3, который старше Java 25 и на
// запуске ругается «Unsupported JNI version… may crash». Поднимаем весь набор
// LWJGL (включая natives-классификаторы) до 3.3.6 — та же ветка API 3.3, что ждёт
// libGDX, но с поддержкой актуальных JDK. На 3.4.x не идём: там переход на FFM,
// который может разойтись с API бэкенда libGDX.
configurations.all {
    resolutionStrategy.eachDependency { details ->
        if (details.requested.group == 'org.lwjgl') {
            details.useVersion(lwjglVersion)
            details.because('поддержка Java 25; по умолчанию libGDX тянет LWJGL 3.3.3')
        }
    }
}

dependencies {
    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
    // Нативные библиотеки движка для десктопа (OpenGL/окно/ввод).
    runtimeOnly "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"

    // JSpecify: стандартные аннотации null-безопасности (@Nullable/@NullMarked).
    // Проверяются IDE и статическими анализаторами — контракт «может быть null»
    // становится машинно-проверяемым, а не «на словах».
    implementation "org.jspecify:jspecify:$jspecifyVersion"

    // Jackson: снимок игры (сохранение/загрузка) в человекочитаемый JSON. Живёт ТОЛЬКО
    // в слое persist; домен (core/model/sim/game) про JSON не знает — граница DTO.
    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"

    testImplementation platform("org.junit:junit-bom:$junitVersion")
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // ArchUnit: архитектурные инварианты как обычные тесты — ацикличность,
    // изоляция домена и направление зависимостей проверяются на каждой сборке.
    testImplementation "com.tngtech.archunit:archunit-junit5:$archunitVersion"

    errorprone "com.google.errorprone:error_prone_core:$errorproneVersion"
    errorprone "com.uber.nullaway:nullaway:$nullawayVersion"
}

// NullAway включён только на compileJava (основной код, весь размечен @NullMarked) — тестовый
// код (compileTestJava) сознательно не проверяется: JUnit-ассерты и тестовые фикстуры не несут
// того же контракта, а гонять NullAway на них — не то, о чём просил этот проект.
tasks.named('compileJava', JavaCompile).configure {
    options.errorprone {
        disableAllChecks = true // весь остальной каталог проверок Error Prone — шум, не наша цель
        error('NullAway')
        option('NullAway:AnnotatedPackages', 'com.rustorio,com.graphics')
    }
}

tasks.named('compileTestJava', JavaCompile).configure {
    options.errorprone.enabled = false
}

// src/tools (P4-11, BUG_FIX_PROGRESS.md) isn't covered by AnnotatedPackages above either — same
// reasoning as compileTestJava: NullAway is a contract for the shipped code, not for dev tooling.
tasks.named('compileToolsJava', JavaCompile).configure {
    options.errorprone.enabled = false
}

application {
    // `./gradlew run` открывает окно графики (движок libGDX).
    mainClass = 'com.graphics.Main'
}

// `./gradlew game` запускает безголовую логику игры в консоли (та, что строим с нуля в уроках).
// Отдельная задача, чтобы не смешивать с оконным `run`. `com.rustorio.Main` живёт в src/tools
// (см. sourceSets.tools выше) — это dev-демонстрация, не часть игры, что ставится игроку.
tasks.register('game', JavaExec) {
    group = 'application'
    description = 'Run the headless game logic in the console'
    classpath = sourceSets.tools.runtimeClasspath
    mainClass = 'com.rustorio.Main'
}

// Ассеты (спрайты) лежат в resources/. Запускаем из корня проекта, чтобы
// Gdx.files.internal("resources/...") их находил.
tasks.named('run', JavaExec) {
    workingDir = rootProject.projectDir
    // Java 25 предупреждает про «restricted method» при загрузке нативных
    // библиотек движка. Явно разрешаем native access (в будущих версиях без
    // этого флага вызовы начнут блокироваться).
    jvmArgs('--enable-native-access=ALL-UNNAMED')
    // На macOS бэкенд LWJGL3/GLFW обязан работать на главном потоке.
    if (System.getProperty('os.name').toLowerCase().contains('mac')) {
        jvmArgs('-XstartOnFirstThread')
    }
}

// `./gradlew benchmark` — headless-замер мс/тик на большой сцене, без окна графики. `com.rustorio.Benchmark`
// живёт в src/tools (см. sourceSets.tools выше) — это dev-инструмент измерения, а не часть игры;
// он давно уже вызывает только публичный API `World` (peek, tick, place*), в package-private
// доступе не нуждается — правь его как обычный внешний код, не как часть домена.
tasks.register('benchmark', JavaExec) {
    group = 'verification'
    description = 'Headless-замер: сколько мс занимает один World.tick() на большой сцене'
    classpath = sourceSets.tools.runtimeClasspath
    mainClass = 'com.rustorio.Benchmark'
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.named('test')
    reports {
        xml.required = true
    }
}
